# aegis

./: .gitignore  LICENSE  README.md  SUBMISSION.md  demo-script.md
artifacts/: compliance_registry.wasm  groth16_verifier.wasm  mock_token.wasm
contracts/compliance-registry/: Cargo.toml
contracts/compliance-registry/src/: lib.rs
contracts/mock-token/: Cargo.toml
contracts/mock-token/src/: lib.rs
demo-video/: .gitignore  aegis-demo.html  package-lock.json  package.json  record.js
docs/: extensions.md  index.html
risc0/: Cargo.toml
risc0/host/: Cargo.toml
risc0/host/src/: main.rs
risc0/methods/: Cargo.toml
risc0/methods/guest/: Cargo.toml
risc0/methods/guest/src/: main.rs
scripts/: m2_deploy.sh  m2_invoke.sh  m2_reprove.sh  m2_restart_p27.sh  m4_demo.sh  m5_testnet.sh
