[package]
name = "compliance-registry"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "25.1", features = ["hazmat-address"] }

[dev-dependencies]
soroban-sdk = { version = "25.1", features = ["testutils", "hazmat-address"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
