[package]
name = "compliance_guest"
version = "0.1.0"
edition = "2021"

# Keep the guest out of the parent workspace (risc0-build runs `cargo metadata`
# on this crate; an empty [workspace] makes it its own workspace root).
[workspace]

[dependencies]
risc0-zkvm = { version = "3.0.4", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
